--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.69.0",
-    "react-hooks-yup-form": "^0.1.5",
+    "yup":"^1.6.1",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
     "web-vitals": "^2.1.4",
     "@mui/x-date-pickers": "^6.18.2",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "@hookform/resolvers":"^2.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
