--- a/package.json
+++ b/package.json
@@ -5,25 +5,30 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^2.9.7",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@mui/x-date-pickers": "^6.18.2",
+    "@reduxjs/toolkit": "^2.11.2",
     "@studio-freight/lenis": "^1.0.42",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.69.0",
-    "yup":"^1.6.1",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
     "web-vitals": "^2.1.4",
-    "@mui/x-date-pickers": "^6.18.2",
-    "date-fns": "^2.30.0",
-    "@hookform/resolvers":"^2.9.7"
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
